--- a/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
+++ b/02-scripts.backup/MID_sub10M_sub75bp_numbers.Rmd
@@ -13,7 +13,7 @@ output:
 library(knitr)
 library(data.table)
 library(tidyverse)
-
+library(patchwork)
 ```
 
 ```{r setup}
@@ -22,7 +22,8 @@ knitr::opts_knit$set(root.dir = normalizePath(".."))
 
 
 ```{r}
-colors3 <- c("#f5767a", "#63f35e", "#8dc6f7") # "#5e63f3")
+# colors3 <- c("#f5767a", "#63f35e", "#8dc6f7") # "#5e63f3")
+colors3 <- c("#311068", "#C83E73", "#41b6c4")
 shapes3 <- c(21, 23, 24)
 
 ```
@@ -37,7 +38,7 @@ Set the sample order for plotting
 sample_order <- full_metadata %>%
   select(Library_ID, Site_code) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  mutate(Site_code= fct_relevel(Site_code, "JAE","VLC","RAD","CMB","MID","ELR","IVE","KIL")) %>%
+  mutate(Site_code= fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   arrange(Site_code) %>%
   pull(Library_ID)
   
@@ -217,7 +218,7 @@ full_metadata %>%
   mutate(Library_ID= fct_relevel(Library_ID, sample_order),
          Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human", "No_reads_10M")) %>%
   ggplot(., aes(x = Library_ID, y = Read_counts, shape = Seq_depth, bg = Seq_depth)) +
-    geom_point(size = 3, color = "grey50") +
+    geom_point(size = 2, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
     scale_shape_manual(values = shapes3) +
@@ -235,9 +236,9 @@ full_metadata %>%
   mutate(Library_ID= fct_relevel(Library_ID, sample_order),
          Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human", "No_reads_75bp")) %>%
   ggplot(., aes(x = Library_ID, y = Read_counts, shape = Seq_depth, bg = Seq_depth)) +
-    geom_point(size = 3, color = "grey50") +
+    geom_point(size = 2, color = "grey50") +
     theme_minimal() +
-    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_fill_manual(values = c("#311068", "#41b6c4")) +
     scale_shape_manual(values = c(21, 24)) +
     theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           text = element_text(size=12)) +
@@ -251,21 +252,27 @@ full_metadata %>%
 
 Summary box plots
 ```{r seqdepth_box}
-full_metadata %>%
+tr_box_plot <- full_metadata %>%
   select(Library_ID, Site_code, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE"),
+         Read_counts = Read_counts / 1000000) %>%
   ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_depth)) +
-    geom_violin() +
+    geom_boxplot(alpha = 0.5) +
+    geom_jitter(alpha = 0.5, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-          text = element_text(size=12)) +
+    theme(axis.text.x = element_text(angle = 0, vjust = 0.5),
+          text = element_text(size=16)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
-    geom_hline(yintercept = 5000000, linetype = "dotted") +
-    ylab("No. reads")
+    geom_hline(yintercept = 10, linetype = "dotted") +
+    labs(fill = "Dataset") +
+    ylab("No. reads (x10^6)") +
+    xlab("")
+
+tr_box_plot
 
 # one without modern calculus
 full_metadata %>%
@@ -273,17 +280,20 @@ full_metadata %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN|JAE|VLC")) %>%
   gather("Seq_depth", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE"),
+         Read_counts = Read_counts / 1000000) %>%
   ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_depth)) +
-    geom_boxplot() +
-    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
+    geom_boxplot(alpha = 0.5) +
+    geom_jitter(alpha = 0.5, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-          text = element_text(size=12)) +
+    theme(axis.text.x = element_text(angle = 0, vjust = 0.5),
+          text = element_text(size=16)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
-    geom_hline(yintercept = 5000000, linetype = "dotted") +
-   ylab("No. reads")
+    geom_hline(yintercept = 10, linetype = "dotted") +
+    labs(fill = "Dataset") +
+    ylab("No. reads (x10^6)") +
+    xlab("")
 
 ```
 
@@ -294,26 +304,22 @@ full_metadata %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "No_reads_75bp") %>%
   group_by(Time_period) %>%
-  wilcox_test(data = ., Read_counts ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = ., Read_counts ~ Seq_depth, p.adjust.method = "fdr")
 
 full_metadata %>%
   select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "No_reads_75bp") %>%
   group_by(Site_code) %>%
-  wilcox_test(data = .,Read_counts ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = .,Read_counts ~ Seq_depth, p.adjust.method = "fdr")
 
 ```
 
@@ -323,26 +329,22 @@ full_metadata %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "No_reads_10M") %>%
   group_by(Time_period) %>%
-  wilcox_test(data = ., Read_counts ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = ., Read_counts ~ Seq_depth, p.adjust.method = "fdr")
 
 full_metadata %>%
   select(Library_ID, Site_code, Time_period, No_reads_no_human, No_reads_10M, No_reads_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_counts") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "No_reads_no_human","No_reads_10M","No_reads_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "No_reads_10M") %>%
   group_by(Site_code) %>%
-  wilcox_test(data = .,Read_counts ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = .,Read_counts ~ Seq_depth, p.adjust.method = "fdr")
 
 ```
 
@@ -520,7 +522,7 @@ full_metadata %>%
   filter(Seq_length != "seq_len_avg_75bp") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
   ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
-    geom_point(size = 3, color = "grey50") +
+    geom_point(size = 2, color = "grey50") +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
     scale_shape_manual(values = shapes3) +
@@ -537,9 +539,9 @@ full_metadata %>%
   filter(Seq_length != "seq_len_avg_10M") %>%  
   mutate(Library_ID= fct_relevel(Library_ID, sample_order)) %>%
   ggplot(., aes(x = Library_ID, y = Read_length, shape = Seq_length, bg = Seq_length)) +
-    geom_point(size = 3, color = "grey50") +
+    geom_point(size = 2, color = "grey50") +
     theme_minimal() +
-    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_fill_manual(values = c("#311068", "#41b6c4")) +
     scale_shape_manual(values = c(21, 24)) +
     theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           text = element_text(size=12)) +
@@ -552,81 +554,77 @@ full_metadata %>%
 
 Summary box plots
 ```{r rl_box}
-full_metadata %>%
+rl_box_plot <- full_metadata %>%
   select(Library_ID, Site_code, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("Seq_length", "Read_counts", 3:ncol(.)) %>%
   mutate(Seq_length = fct_relevel(Seq_length, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   ggplot(., aes(x = Site_code, y = Read_counts, fill = Seq_length)) +
-    geom_boxplot() +
-    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.1), size = 1) +
+    geom_boxplot(alpha = 0.5) +
+    geom_jitter(alpha = 0.5, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-          text = element_text(size=12)) +
+    theme(axis.text.x = element_text(angle = 0, vjust = 0.5),
+          text = element_text(size=16)) +
     scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
-    geom_hline(yintercept = 50, linetype = "dotted") +
+    geom_hline(yintercept = 75, linetype = "dotted") +
+    labs(fill = "Dataset") +
+    xlab("") +
     ylab("Avg. read length (bp)")
 
-```
-
-```{r}
-
-full_metadata %>%
-  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
-  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
-  mutate(Time_period = as.character(Time_period)) %>%
-  filter(Seq_depth != "seq_len_avg_75bp") %>%
-  group_by(Time_period) %>%
-  wilcox_test(data = ., Read_length ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
-
-full_metadata %>%
-  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
-  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
-  mutate(Time_period = as.character(Time_period)) %>%
-  filter(Seq_depth != "seq_len_avg_75bp") %>%
-  group_by(Site_code) %>%
-  wilcox_test(data = .,Read_length ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+rl_box_plot
 
 ```
 
 ```{r}
-full_metadata %>%
-  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
-  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
-  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
-  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
-  mutate(Time_period = as.character(Time_period)) %>%
-  filter(Seq_depth != "seq_len_avg_10M") %>%
-  group_by(Time_period) %>%
-  wilcox_test(data = ., Read_length ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
 
 full_metadata %>%
   select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_75bp") %>%
+  group_by(Time_period) %>%
+  pairwise_wilcox_test(data = ., Read_length ~ Seq_depth, p.adjust.method = "fdr")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_75bp") %>%
+  group_by(Site_code) %>%
+  pairwise_wilcox_test(data = .,Read_length ~ Seq_depth, p.adjust.method = "fdr")
+
+```
+
+```{r}
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
+  mutate(Time_period = as.character(Time_period)) %>%
+  filter(Seq_depth != "seq_len_avg_10M") %>%
+  group_by(Time_period) %>%
+  pairwise_wilcox_test(data = ., Read_length ~ Seq_depth, p.adjust.method = "fdr")
+
+full_metadata %>%
+  select(Library_ID, Site_code, Time_period, seq_len_avg, seq_len_avg_10M, seq_len_avg_75bp) %>%
+  filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
+  pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "Read_length") %>%
+  mutate(Seq_depth = fct_relevel(Seq_depth, "seq_len_avg","seq_len_avg_10M","seq_len_avg_75bp"),
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "seq_len_avg_10M") %>%
   group_by(Site_code) %>%
-  wilcox_test(data = .,Read_length ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = .,Read_length ~ Seq_depth, p.adjust.method = "fdr")
 
 ```
 
@@ -822,7 +820,7 @@ full_metadata %>%
   ggplot(., aes(x = Library_ID, y = Read_length, shape = GC, bg = GC)) +
     geom_point(size = 2, color = "grey50") +
     theme_minimal() +
-    scale_fill_manual(values = c("#f5767a", "#8dc6f7")) +
+    scale_fill_manual(values = c("#311068", "#41b6c4")) +
     scale_shape_manual(values = c(21, 24)) +
     theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           text = element_text(size=12)) +
@@ -835,22 +833,26 @@ full_metadata %>%
 
 Summary box plots
 ```{r gc_box}
-full_metadata %>%
+gc_box_plot <- full_metadata %>%
   select(Library_ID, Site_code, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   gather("GC", "Read_counts", 3:ncol(.)) %>%
   mutate(GC = fct_relevel(GC, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   ggplot(., aes(x = Site_code, y = Read_counts, fill = GC)) +
-    geom_boxplot() +
-    geom_jitter(alpha = 0.3, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
+    geom_boxplot(alpha = 0.5) +
+    geom_jitter(alpha = 0.5, position = position_jitterdodge(jitter.width = 0.25), size = 1) +
     theme_minimal() +
     scale_fill_manual(values = colors3) +
-    theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
-          text = element_text(size=12)) +
-    scale_y_continuous(breaks=scales::pretty_breaks(n=8)) +
+    theme(axis.text.x = element_text(angle = 0, vjust = 0.5),
+          text = element_text(size=16)) +
+    scale_y_continuous(breaks=scales::pretty_breaks(n=12)) +
     geom_hline(yintercept = 50, linetype = "dotted") +
-    ylab("Avg. %GC")
+    labs(fill = "Dataset") +
+    xlab("") +
+    ylab("Avg. GC (%)")
+
+gc_box_plot
 
 ```
 
@@ -861,26 +863,22 @@ full_metadata %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "gc_avg_75bp") %>%
   group_by(Time_period) %>%
-  wilcox_test(data = ., GC ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = ., GC ~ Seq_depth, p.adjust.method = "fdr")
 
 full_metadata %>%
   select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "gc_avg_75bp") %>%
   group_by(Site_code) %>%
-  wilcox_test(data = .,GC ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = .,GC ~ Seq_depth, p.adjust.method = "fdr")
 
 ```
 
@@ -891,29 +889,36 @@ full_metadata %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "gc_avg_10M") %>%
   group_by(Time_period) %>%
-  wilcox_test(data = ., GC ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = ., GC ~ Seq_depth, p.adjust.method = "fdr")
 
 full_metadata %>%
   select(Library_ID, Site_code, Time_period, gc_avg, gc_avg_10M, gc_avg_75bp) %>%
   filter(!str_detect(Library_ID, "EXB|LIB|CSS|CSL|CSD|CSN")) %>%
   pivot_longer(!Library_ID:Time_period, names_to = "Seq_depth", values_to = "GC") %>%
   mutate(Seq_depth = fct_relevel(Seq_depth, "gc_avg","gc_avg_10M","gc_avg_75bp"),
-         Site_code = fct_relevel(Site_code, "JAE","VLC","MID","CMB","RAD","KIL","ELR","IVE")) %>%
+         Site_code = fct_relevel(Site_code, "IVE","ELR","KIL","RAD","CMB","MID","VLC","JAE")) %>%
   mutate(Time_period = as.character(Time_period)) %>%
   filter(Seq_depth != "gc_avg_10M") %>%
   group_by(Site_code) %>%
-  wilcox_test(data = .,GC ~ Seq_depth) %>%
-  adjust_pvalue(method = "fdr") %>%
-  add_significance("p.adj")
+  pairwise_wilcox_test(data = .,GC ~ Seq_depth, p.adjust.method = "fdr")
 
 ```
 
+```{r}
+tr_rl_gc_figure <- tr_box_plot + rl_box_plot + gc_box_plot +
+  plot_layout(nrow = 3) + 
+  plot_annotation(tag_levels = 'A')
+
+tr_rl_gc_figure
+
+ggsave("./06-publication/supplemental_figures/SXX10/panel_parts/tr_rl_gc_figure.pdf", plot = tr_rl_gc_figure, device = "pdf",
+       scale = 1, width = 13, height = 15, units = c("in"), dpi = 300)
+
+```
 
 
 
