--- a/06-publication/main_figures/Figure_4/Figure_4.Rmd
+++ b/06-publication/main_figures/Figure_4/Figure_4.Rmd
@@ -141,6 +141,50 @@ strep_group_info <- mpa3_species_decontam %>%
 
 ```
 
+```{r strep_groups}
+# load the MALT RefSeq taxonomy tables that have been decontaminated 
+# and the column headers are cleaned up
+# this is to get the Strep groups for coloring the PCA plot
+load("./05-results.backup/Taxonomy_tables.RData")
+
+# list poor samples from cuperdec
+poor_samples_rs <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
+  rename(Library_ID = Sample) %>%
+  filter(str_detect(Library_ID, "MID")) %>%
+  pull(Library_ID)
+
+# we'll use the prevalence-filtered dataset
+malt_rs <- all_species_decontam_prev %>%
+  # select(matches("Species|MID|CMB")) %>%
+  adorn_totals(where = "col")  %>%
+  filter(Total >  0) %>%
+  select(-Total) %>%
+  select(-poor_samples_rs)
+
+strep_groups <- fread("./00-documentation.backup/dRep_strep_groups.tsv") %>%
+  # remove the extrac column with the old dRep
+  select(-Clade_Consensus) %>%
+  # make a factor for plotting
+  mutate(dRep = fct_relevel(dRep, "Sanguinis","Mitis","Salivarius","Anginosus","Bovis","Pyogenic","Mutans","Other_oral","Other","Unknown"))
+
+strep_rs <- malt_rs %>%
+  filter(str_detect(Species, "Streptococcus")) %>%
+  # join with the Strep grup table for plotting
+  inner_join(., strep_groups) %>%
+  select(Species, dRep, everything()) %>%
+  # convert to long-format
+  gather("Library_ID","Counts", 3:ncol(.)) %>%
+  # mutate(Library_ID = fct_relevel(Library_ID, sample_order_rs)) %>%
+  dplyr::group_by(Library_ID, dRep) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ungroup() %>%
+  group_by(Library_ID) %>%
+  mutate(Percent = Count_sum / sum(Count_sum)) %>%
+  select(Library_ID, dRep, Percent) %>%
+  pivot_wider(names_from = dRep, values_from = Percent)
+
+```
+
 ```{r load_metadata}
 
 # load the metadata file
@@ -475,8 +519,8 @@ gc
 rl <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
 rl
 
-ggsave("./06-publication/supplemental_figures/SXX8/read_length.pdf", plot = rl,
-       device = "pdf", scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
+# ggsave("./06-publication/supplemental_figures/S11/read_length.pdf", plot = rl,
+#        device = "pdf", scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
 
 ```
 
@@ -654,8 +698,9 @@ Check the GC content of the species w/strongest loadings in PC2+ and PC2- space
 
 # read in the file w/avg GC content of each species, taken from NCBI Genome
 pc2_gc <- fread("./05-results.backup/pc2_gc_avg.tsv") %>%
-  mutate(Order = c(rep(1:10, times = 2)))
+  mutate(Order = c(rep(1:10, times = 4))) %>%
   # mutate(Order = c(rep(1:10)), c(rep(1:10)))
+  drop_na(PC2_loading)
 
 # plot
 box <- ggplot(pc2_gc, aes(x = PC2, y = Avg_GC, fill = PC2)) +
@@ -726,114 +771,6 @@ beta_div
 ```
 
 
-```{r, eval = F}
-
-plot_grid(time_period, pc1_neg_plot, 
-                         gc, box,
-          nrow=2, labels = c("A", "B","C","D"), rel_widths = c(1, 1), scale = 0.95)
-
-
-
-```
-
-Run a permanova with function adonis to test if the clusters are significantly
-different. First load the metadata again so the blanks and Yanomami samples can
-be removed and then make them factors.
-```{r metadata_betadisper}
-
-metadata_noblanks <- fread("./00-documentation.backup/radcliffe_pfuT_metadata.tsv") %>%
-  bind_rows(., fread("./00-documentation.backup/iberian_medieval_metadata.tsv")) %>%
-  bind_rows(., fread("./00-documentation.backup/kilteasheen_metadata.tsv")) %>%
-  bind_rows(., fread("./00-documentation.backup/mod_metadata.tsv")) %>%
-  full_join(., fread("./00-documentation.backup/MID_analysis_metadata.tsv"))
-
-
-metadata_noblanks <- metadata_noblanks %>%
-  as_tibble() %>%
-  filter(!Library_ID %in% outliers_mpa3) %>%
-  filter(!Library_ID %in% poor_samples_mpa3) %>%
-  filter(!str_detect(Library_ID, "CSN|CSL|CSS|CSD|EXB|LIB")) %>%
-  # remove the MID samples that have no metadata
-  filter(!str_detect(Library_ID, "MID025.A0101|MID033.A0101|MID056.A0101|MID065.A0101|MID068.A0101|MID076.A0101|MID078.A0101")) %>%
-  mutate(Site = fct_relevel(Site_code, "MID", "CMB", "RAD", "KIL",
-                                   "ELR", "IVE", "JAE","VLC"),
-         Time_period = fct_relevel(Time_period, "Industrial","Medieval")) %>%
-  select(Library_ID, Site_code, Time_period) %>%
-  arrange(Library_ID) %>%
-  unique()
-
-```
-
-Run a PERMANOVA with adonis2 on the abundance-filtered clr-transformed species matrix.
-```{r adonis_noblanks_species}
-# Euclidean distance, uses the clr-transformed matrix from the mixOmics PCA above
-mpa3_species_decontam_unfilt_all.euc <- vegdist(mpa3_species_decontam_unfilt_all.pca$X, method = "euclidean", na.rm = T)
-mpa3_species_decontam_unfilt_all.euc.pcoa <- ape::pcoa(mpa3_species_decontam_unfilt_all.euc)
-
-mpa3_species_decontam_unfilt_all.euc.pcoavectors <- as.data.frame(mpa3_species_decontam_unfilt_all.euc.pcoa$vectors)
-mpa3_species_decontam_unfilt_all.euc.pcoavectors <- mpa3_species_decontam_unfilt_all.euc.pcoavectors %>%
-  rownames_to_column("Library_ID")
-
-mpa3_species_decontam_unfilt_all.euc.vecmet <- inner_join(mpa3_species_decontam_unfilt_all.euc.pcoavectors, full_metadata, by = "Library_ID")
-
-mpa3_species_decontam_unfilt_all.euc.vecmet %>%
-  ggplot(., aes(Axis.1, Axis.2, colour = Time_period, shape = Time_period)) +
-  geom_point(size = 3) +
-  scale_colour_manual(values = Time_period_colors) +
-  scale_shape_manual(values = Time_period_shapes) +
-  stat_ellipse(aes(colour = Time_period, group = Time_period)) +
-  theme_minimal(base_size = 7) +
-  scale_y_reverse() +
-  scale_x_reverse() +
-  ggtitle("Time_period")
-
-metadata_noblanks %>% select(Library_ID) %>% anti_join(., mpa3_species_decontam_unfilt_all.euc.pcoavectors %>% select(Library_ID))
-
-# test for difference between different metadata categories 
-adonis2(mpa3_species_decontam_unfilt_all.euc ~ Site_code + Time_period, metadata_noblanks, permutations = 999, by = "margin")
-adonis2(mpa3_species_decontam_unfilt_all.euc ~ Time_period, metadata_noblanks, permutations = 999, by = "margin")
-
-
-# pairwise adonis2 to see which groups are different
-# pa2in <- mpa3_species_decontam_unfilt_all.pca$X %>% as.data.frame.matrix() 
-# pairwise.adonis2(mpa3_species_decontam_unfilt_all.euc ~ Time_period, metadata_noblanks, strata = 'Time_period')
-
-```
-
-```{r pairwise_adonis}
-library(funfuns)
-
-x <- mpa3_species_decontam_unfilt_all  %>% rownames_to_column("Library_ID") %>% select(-Library_ID)
-#   pivot_longer(!Library_ID, names_to = "Taxa", values_to = "Counts") %>% 
-#   pivot_wider(names_from = "Library_ID", values_from = "Counts") %>%
-#   column_to_rownames("Taxa")
-
-factors <- metadata_noblanks %>% select(Time_period) %>% mutate(Time_period = fct_relevel(Time_period, "Medieval", "Industrial","Modern")) %>% pull()
- 
-pwa_time_period <- pairwise.adonis(
-  x,
-  factors,
-  sim.method = "euclidean",
-  p.adjust.m = "fdr",
-  permutations = 999
-)
-
-factors <- metadata_noblanks %>% select(Site_code) %>% mutate(Site_code = fct_relevel(Site_code, "MID", "CMB","RAD","KIL","ELR","IVE","JAE","VLC"))  %>% pull()
-
-pwa_site <- pairwise.adonis(
-  x,
-  factors,
-  sim.method = "euclidean",
-  p.adjust.m = "fdr",
-  permutations = 999
-)
-
-pwa_time_period
-pwa_site %>%
-  arrange(p.adjusted)
-
-```
-
 ## Canonical Correlation Analysis
 
 ```{r pca_species_all}
@@ -845,6 +782,37 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
   mutate(Counts = Counts +1) %>%
   spread(Species,Counts) %>%
   column_to_rownames("Library_ID")
+
+# combine metadata
+comb_metadata <- full_metadata %>%
+  mutate(`DNA_molecules_per_library_x10^6_log` = log10(`DNA_molecules_per_library_x10^6`)) %>%
+  full_join(., malt_map_unmap_rl_gc) %>%
+  full_join(., strep_rs, by = "Library_ID")
+
+
+# prepare to run a PCA
+# check the number of components to retain by tuning the PCA
+tune.pca(mpa3_species_decontam_unfilt, logratio = 'CLR')
+
+pca.list <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 5, logratio = 'CLR')
+
+exp_var_all <- paste0(round(pca.list$prop_expl_var$X * 100, 2), "%")
+all_pca_values <- pca.list$variates$X %>%
+          as.data.frame() %>%
+          rownames_to_column("Library_ID") %>%
+          inner_join(comb_metadata, by = "Library_ID") %>%
+          inner_join(., strep_rs) %>%
+  drop_na(Site_code) %>%
+  mutate(Time_period_n = ifelse(Time_period == "Medieval",0,
+                                ifelse(Time_period == "Industrial",1,2))) %>%
+  mutate(Site_code_n = ifelse(Site_code == "MID",0,
+                              ifelse(Site_code == "CMB",1,
+                                     ifelse(Site_code == "RAD",2,
+                                            ifelse(Site_code == "KIL",3,
+                                                   ifelse(Site_code == "ELR",4,
+                                                          ifelse(Site_code == "IVE",5,
+                                                                 ifelse(Site_code == "JAE",6,7))))))))
+
 
 ```
 
