--- a/06-publication/main_figures/Figure_3/Figure_3.Rmd
+++ b/06-publication/main_figures/Figure_3/Figure_3.Rmd
@@ -19,7 +19,7 @@ library(ape)
 library(mixOmics)
 library(janitor)
 library(rstatix)
-library(variancePartition)
+# library(variancePartition)
 library(pander)
 library(tidyverse)
 library(gplots)
@@ -374,7 +374,7 @@ plot_pca <- function(df, pc1, pc2, color_group, shape_group, ncomps) {
     }
 
     pca_plot <- ggplot(df_X, aes(pc1, pc2)) +
-     geom_point(aes(, fill = color_group, shape = shape_group), size = 2.5, stroke = 0.3) +
+     geom_point(aes(, fill = color_group, shape = shape_group), size = 4.5, stroke = 0.3) +
      scale_fill_manual(values = metadata_group_colors) +
      scale_shape_manual(values = metadata_group_shapes) +
      # stat_ellipse() +
@@ -441,7 +441,7 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
     }
 
     pca_plot <- ggplot(df_X, aes(pc1, pc2, fill = color_group, shape = shape_group)) +
-     geom_point(size = 2, color = "black") +
+     geom_point(size = 5, color = "black") +
      scale_fill_viridis_c(option = "C") +
      scale_shape_manual(values = c(24,21)) +
      # stat_ellipse() +
@@ -505,7 +505,7 @@ plot_pca_mid <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_t
     }
 
     pca_plot <- ggplot(df_X, aes(pc1, pc2, colour = color_group, shape = shape_group)) +
-     geom_point(size = 2) +
+     geom_point(size = 5) +
      scale_colour_manual(values = c("#5A167E","#E95562","#FED395","#252525","#311068","#C83E73","#FEA873")) + # 
      scale_shape_manual(values = c(16, 17, 15, 18)) +
      # stat_ellipse() +
@@ -562,7 +562,7 @@ humann3_path_l1 <- humann3_path %>%
 mixOmics::tune.pca(humann3_path_l1, logratio = 'CLR')
 
 
-humann3_all_otu.pca <- mixOmics::pca(humann3_path_l1, ncomp = 2, logratio = 'CLR')
+humann3_all_otu.pca <- mixOmics::pca(humann3_path_l1, ncomp = 3, logratio = 'CLR')
 humann3_all_pca_values <- humann3_all_otu.pca$variates$X %>%
   as.data.frame() %>%
   rownames_to_column("Library_ID") %>%
@@ -608,6 +608,121 @@ sg
 #        device = "pdf", scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
 
 ```
+
+```{r pca_biplot_fxn}
+plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
+    metadata_group_colors <- get(paste(metadata_group, "_colors", sep = ""))
+    metadata_group_shapes <- get(paste(metadata_group, "_shapes", sep = ""))
+   
+    arrow_pc <- enquo(columntitle)
+    
+    exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
+    
+    # select only the PCs from the PCA and add metadata
+    df_X <- df$variates$X %>%
+              as.data.frame() %>%
+              rownames_to_column("Library_ID") %>%
+              inner_join(full_metadata, by = "Library_ID")
+    
+    metadata_group = df_X[[metadata_group]]
+    
+    corr_lam <- df$sdev[c("PC1", "PC2", "PC3")] * sqrt(nrow(df_X))
+
+    df_X <- df_X %>%
+      mutate(PC1 = PC1 / corr_lam[1],
+             PC2 = PC2 / corr_lam[2], 
+             PC3 = PC3 / corr_lam[3])
+
+    # select the correct PC column and explained variance for PC1
+    if (pc1 == 'PC1') {
+        Pc1 <- df_X$PC1
+        exp_var_pc1 <- exp_var[1]
+        xaxis <- c("PC1")
+    } else if (pc1 == 'PC2') {
+        Pc1 <- df_X$PC2
+        exp_var_pc1 <- exp_var[2]
+        xaxis <- c("PC2")
+    } else if (pc1 == 'PC3') {
+        Pc1 <- df_X$PC3
+        exp_var_pc1 <- exp_var[3]
+        xaxis <- c("PC3")
+   }
+    
+    # select the correct PC column and explained variance for PC2
+    if (pc2 == 'PC1') {
+        Pc2 <- df_X$PC1
+        exp_var_pc2 <- exp_var[1]
+        yaxis <- c("PC1")
+ } else if (pc2 == 'PC2') {
+       Pc2 <- df_X$PC2
+       exp_var_pc2 <- exp_var[2]
+       yaxis <- c("PC2")
+    } else if (pc2 == 'PC3') {
+       Pc2 <- df_X$PC3
+       exp_var_pc2 <- exp_var[3]
+       yaxis <- c("PC3")
+   }
+    
+    # Identify the 10 pathways that have highest positive and negative loadings in the selected PC
+    pws_10 <- df$loadings$X %>%
+      as.data.frame(.) %>%
+      rownames_to_column(var = "Pathway") %>%
+      separate(Pathway, into = "Pathway", sep = ":", extra = "drop") %>%
+      top_n(10, !!arrow_pc)
+
+    neg_10 <- df$loadings$X %>%
+      as.data.frame(.) %>%
+      rownames_to_column(var = "Pathway") %>%
+      separate(Pathway, into = "Pathway", sep = ":", extra = "drop") %>%
+      top_n(-10, !!arrow_pc)
+
+
+    pca_plot_bi <- ggplot(df_X, aes(x = Pc1, y = Pc2)) +
+      geom_point(size = 3.5, aes(shape = metadata_group, fill = metadata_group))+
+      geom_segment(data = pws_10,
+                   aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
+                   x = 0, y = 0, colour = "black",
+                   size = 0.5,
+                   arrow = arrow(length = unit(0.03, "npc"))) +
+      geom_label_repel(data = pws_10,
+                   aes(x = get(paste(pc1)), y = get(paste(pc2)), label = Pathway),
+                   size = 2.5, colour = "grey20", label.padding = 0.2, force = 5, max.overlaps = 20) +
+      geom_segment(data = neg_10,
+                   aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
+                   x = 0, y = 0, colour = "grey50",
+                   size = 0.5,
+                   arrow = arrow(length = unit(0.03, "npc"))) +
+      geom_label_repel(data = neg_10,
+                   aes(x = get(paste(pc1)), y = get(paste(pc2)), label = Pathway),
+                   size = 2.5, colour = "grey20", label.padding = 0.2, max.overlaps = 12) +
+      labs(x = paste(xaxis, " - ", exp_var_pc1),
+           y = paste(yaxis, " - ", exp_var_pc2)) +
+      scale_fill_manual(values = metadata_group_colors) +
+      scale_shape_manual(values = metadata_group_shapes) +
+      theme_minimal() + theme(text = element_text(size = 16)) +
+      theme(text = element_text(size=16)) +
+      theme(legend.position = "top")
+
+    return(pca_plot_bi)
+}
+
+# pca_test_biplot <- plot_pca_bi(malt_species.pca, "PC3", "PC2", "Village", PC2)
+# pca_test_biplot
+
+# pcabitest <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Pipenotch", PC1)
+# pcabitest
+
+```
+
+```{r}
+Pipenotch_colors = c("#311068","#C83E73")
+Pipenotch_shapes = c(21,24)
+
+biplot <- plot_pca_bi(humann3_all_otu.pca, "PC1", "PC2", "Pipenotch", PC1)
+biplot
+
+```
+
 
 ## Species contributions to pathways
 
@@ -700,21 +815,12 @@ paths_sp_pc1 <- humann3_path_pcbi_bar_df %>%
   ggplot(., aes(x=Path, y=Percent, fill = Genus)) +
     geom_bar(stat = "identity") +
     theme_minimal() +
-    # scale_fill_viridis_d(option = "B") +
-    # scale_fill_manual(values = c("#000004FF","#969696","#2D1160FF","#51127CFF", # 100B2EFF
-    #                              "#721F81FF","#932B80FF","#B63679FF","#D8456CFF",
-    #                              "#F1605DFF","#FB8861FF","#FEAF77FF","#FED799FF","#FCFDBFFF")) +
-    # scale_fill_manual(values = c("#000004FF","#969696","#330A5FFF","#56106EFF",
-    #                              "#781C6DFF","#9A2865FF","#BB3754FF","#D84C3EFF",
-    #                              "#ED6925FF","#F98C0AFF","#FCB519FF","#F4DE52FF","#FCFFA4FF")) +
     scale_fill_manual(values = c("#0D0887FF","#969696","#5D01A6FF","#7E03A8FF",
                                  "#9C179EFF","#B52F8CFF","#CC4678FF","#DE5F65FF",
                                  "#ED7953FF","#F89441FF","#FDB32FFF","#FBD424FF","#F0F921FF")) +
-    # scale_fill_manual(values = c("#03051AFF","#969696","#3F1B44FF","#611F53FF",
-    #                              "#841E5AFF","#A9185AFF","#CB1B4FFF","#E43841FF",
-    #                              "#F06043FF","#F4875EFF","#F6AA82FF","#F7CCAEFF","#FAEBDDFF")) +
-     theme(text = element_text(size=18),
+    theme(text = element_text(size=18),
           axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+    theme(legend.position = "none") +
     ylab("Percent") +
     ggtitle("Metacyc pathways - PC1 positive") +
     theme(title = element_text(size=10))
@@ -800,6 +906,7 @@ paths_sp_pc2 <- humann3_path_pcbi_bar_df %>%
     scale_fill_manual(values = c("#0D0887FF","#969696","#B52F8CFF","#ED7953FF","#FCFFA4FF")) +
     theme(text = element_text(size=18),
           axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1)) +
+    theme(legend.position = "none") +
     # facet_wrap(~pathrtholog, nrow=2) +
     ylab("Percent") +
     ggtitle("Metacyc pathways - PC1 negative") +
@@ -810,7 +917,7 @@ paths_sp_pc2
 
 
 ```{r plot_together}
-(pipenotch + gc + sg) / (paths_sp_pc2 + paths_sp_pc1)
+# (pipenotch + gc + sg) / (paths_sp_pc2 + paths_sp_pc1)
 # 
 # (pipenotch + gc + sg) + (paths_sp_pc2 + paths_sp_pc1) +
 #   plot_layout(ncol = 2)
@@ -818,17 +925,34 @@ paths_sp_pc2
 # (pipenotch / gc / sg) | (paths_sp_pc2 / paths_sp_pc1) +
 #   plot_layout(ncol = 2)
 # 
-paths_species <- paths_sp_pc2 / paths_sp_pc1
+# paths_species <- paths_sp_pc2 / paths_sp_pc1
+# 
+# (pipenotch +  pd + gc + sg + plot_layout(guides = 'collect')) | paths_species
+# 
+# paths_beta_div <- pipenotch + pd + gc + sg + paths_sp_pc2 + paths_sp_pc1 +
+#   plot_layout(ncol = 2)
+# 
+# paths_beta_div
+# 
+# ggsave("./06-publication/main_figures/Figure_3/h3_paths_beta_div_high.pdf", plot = paths_beta_div,
+#        device = "pdf", scale = 1, width = 15, height = 15, units = c("in"), dpi = 300)
 
-(pipenotch +  pd + gc + sg + plot_layout(guides = 'collect')) | paths_species
 
-paths_beta_div <- pipenotch + pd + gc + sg + paths_sp_pc2 + paths_sp_pc1 +
+h3_pcas <- pipenotch + pd + gc + sg +
   plot_layout(ncol = 2)
 
-paths_beta_div
+h3_pcas
 
-ggsave("./06-publication/main_figures/Figure_XX7/h3_paths_beta_div_high.pdf", plot = paths_beta_div,
-       device = "pdf", scale = 1, width = 15, height = 15, units = c("in"), dpi = 300)
+ggsave("./06-publication/main_figures/Figure_3/h3_paths_beta_div.pdf", plot = h3_pcas,
+       device = "pdf", scale = 1, width = 15, height = 11.5, units = c("in"), dpi = 300)
+
+h3biplots <- biplot + paths_sp_pc2 + paths_sp_pc1 +
+  plot_layout(widths = c(2, 1,1))
+
+h3biplots
+
+ggsave("./06-publication/main_figures/Figure_3/h3_paths_biplots.pdf", plot = h3biplots,
+       device = "pdf", scale = 1, width = 10, height = 9.25, units = c("in"), dpi = 300)
 
 ```
 
@@ -968,8 +1092,8 @@ mid_corr_plot
 
 
 ```{r}
-svg(file = "./06-publication/main_figures/Figure_XX7/mid_h3_path_corr_plot.svg") 
-# pdf(file = "./06-publication/main_figures/Figure_XX7/mid_h3_path_corr_plot.pdf") 
+svg(file = "./06-publication/main_figures/Figure_3/mid_h3_path_corr_plot.svg") 
+# pdf(file = "./06-publication/main_figures/Figure_3/mid_h3_path_corr_plot.pdf") 
 
 C_mid %>%
   corrplot::corrplot(., p.mat = pvals_mid$p, order = "original", type = "full", col = colorset, is.corr = FALSE, cl.cex = 0.95, diag = FALSE, #tl.srt = 45,
