--- a/06-publication/main_figures/Figure_5/Figure_5.Rmd
+++ b/06-publication/main_figures/Figure_5/Figure_5.Rmd
@@ -18,7 +18,7 @@ library(ape)
 library(mixOmics)
 library(compositions)
 library(vegan)
-library(pairwiseAdonis)
+# library(pairwiseAdonis)
 library(variancePartition)
 library(janitor)
 library(pander)
@@ -70,7 +70,7 @@ sampling_sites_europe <- ggplot(data = world) +
   scale_color_manual(values = c("black","grey50"))
 sampling_sites_europe
 
-ggsave("./06-publication/main_figures/Figure_4/sample_site_map.pdf", plot = sampling_sites_europe, device = "pdf",
+ggsave("./06-publication/main_figures/Figure_5/sample_site_map.pdf", plot = sampling_sites_europe, device = "pdf",
        scale = 1, width = 5, height = 5, units = c("in"), dpi = 300)
 
 ```
@@ -250,7 +250,7 @@ plot_pca <- function(df, pc1, pc2, color_group, shape_group, ncomps) {
     }
 
     pca_plot <- ggplot(df_X, aes(pc1, pc2)) +
-     geom_point(aes(, fill = color_group, shape = shape_group), size = 2.5, stroke = 0.3) +
+     geom_point(aes(, fill = color_group, shape = shape_group), size = 3.5, stroke = 0.3) +
      scale_fill_manual(values = metadata_group_colors) +
      scale_shape_manual(values = metadata_group_shapes) +
      # stat_ellipse() +
@@ -318,7 +318,7 @@ plot_pca_cont <- function(df, pc1, pc2, color_group, shape_group, ncomps, title_
     }
 
     pca_plot <- ggplot(df_X, aes(pc1, pc2, fill = color_group, shape = shape_group)) +
-     geom_point(size = 2.5, stroke = 0.3) +
+     geom_point(size = 3.5, stroke = 0.3) +
      scale_fill_viridis_c(option = "C") +
      scale_shape_manual(values = metadata_group_shapes) +
      # stat_ellipse() +
@@ -348,7 +348,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
     exp_var <- paste0(round(df$prop_expl_var$X * 100, 2), "%") # explained variance for x- and y-labels
     
     # select only the PCs from the PCA and add metadata
-    df_X <- df$variates$X %>%
+    df_X <- df$prop_expl_var$X %>%
               as.data.frame() %>%
               rownames_to_column("Library_ID") %>%
               inner_join(full_metadata, by = "Library_ID")
@@ -382,7 +382,7 @@ plot_pca_bi <- function(df, pc1, pc2, metadata_group, columntitle) {
 
 
     pca_plot_bi <- ggplot(df_Y, aes(x = get(paste(pc1)), y = get(paste(pc2)))) +
-      geom_point(size = 2.5, aes(shape = get(paste(metadata_group)), fill = get(paste(metadata_group)))) +
+      geom_point(size = 3.5, aes(shape = get(paste(metadata_group)), fill = get(paste(metadata_group)))) +
       geom_segment(data = pws_10,
                    aes(xend = get(paste(pc1)), yend = get(paste(pc2))),
                    x = 0, y = 0, colour = "black",
@@ -562,7 +562,7 @@ mpa3_all_pca_values_rs_pc <- mpa3_all_otu.pca$variates$X %>%
   left_join(., pc_species_neg, by = "Library_ID")
 
 pc1_neg_plot <- ggplot(mpa3_all_pca_values_rs_pc, aes(PC1, PC2, fill = Percent_neg, shape = Time_period)) +
-  geom_point(size = 2, color = "black") +
+  geom_point(size = 3.5, color = "black") +
      scale_fill_viridis_c(option = "C") +
      scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
      # stat_ellipse() +
@@ -765,8 +765,8 @@ rain
 beta_div <- time_period + pc1_neg_plot + gc + box
 beta_div
 
-# ggsave("./06-publication/main_figures/Figure_4/beta_div_all.pdf", plot = beta_div,
-#        device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
+ggsave("./06-publication/main_figures/Figure_5/beta_div_all.pdf", plot = beta_div,
+       device = "pdf", scale = 1, width = 11, height = 8.5, units = c("in"), dpi = 300)
 
 ```
 
@@ -892,7 +892,7 @@ C_all %>%
 ```
 
 ```{r, eval = F}
-svg(file = "./06-publication/main_figures/Figure_4/all_corr_plot.svg") 
+svg(file = "./06-publication/main_figures/Figure_5/all_corr_plot.svg") 
 
 C_all %>%
   corrplot::corrplot(., p.mat = pvals_all$p, order = "hclust", type = "upper", col = colorset, is.corr = FALSE, cl.cex = 1.5, diag = FALSE, tl.cex = 1.7,
